# zwo

./: .gitignore  CMakeLists.txt  experiment.cfg  notes.txt  plan.txt  test.txt  todo.txt  zwo.cfg
archive/: experiment-find-center.cfg  polaris.cc  signatures.cc
cmake/platform/: unix64.txt  win64.txt
cmake/scripts/: preamble.txt
src/: CMakeLists.txt  log.cc  log.h  main.cc
src/capture/: capture.cc
src/menu/: ioptron.cc  ioptron.h  menu.cc  serial.cc  serial.h
src/shared/: image_double_buffer.cc  image_double_buffer.h  settings_buffer.h
src/window/: black.cc  file.cc  findstars.cc  findstars.h  levenberg_marquardt.cc  levenberg_marquardt.h  window.cc  window.h
